Use published Delta 4.4 MOR and remove Fluss